tests/e2e/semantics/mutation/list_contains_err2.error
Error: syntax error in story at line 3, column 1

3|    b = "f"
      ^^^

E0100: Can't assign `string` to `boolean`
