tests/e2e/semantics/mutation/list_contains_err2.story
a = [1, 2]
b = a contains item: 2
b = "f"
